--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@xyflow/react": "^12.10.0",
+    "framer-motion": "^12.34.0",
     "next": "16.1.6",
+    "prism-react-renderer": "^2.4.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
