--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@xyflow/react": "^12.10.0",
     "framer-motion": "^12.34.0",
     "next": "16.1.6",
+    "next-themes": "^0.4.6",
     "prism-react-renderer": "^2.4.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
